# off-the-grid

./: Cargo.toml  LICENSE  README.md  flake.nix  matcher_config.json  node_config.json  shell.nix
.github/workflows/: build.yml  ci.yml  dependabot.yml
cli/: Cargo.toml  grid_multi.ergotree  grid_order.ergotree
cli/proptest-regressions/grid/: multigrid_order.txt
cli/src/: lib.rs  main.rs  matcher_config.rs  node_config.rs  scan_config.rs  units.rs
cli/src/boxes/: describe_box.rs  liquidity_box.rs  mod.rs  tracked_box.rs  wallet_box.rs
cli/src/commands/: error.rs  grid.rs  matcher.rs  mod.rs  scans.rs  tokens.rs  units.rs
cli/src/commands/grid/: create.rs  mod.rs  redeem.rs  subcommands.rs
cli/src/grid/: grid_order.rs  mod.rs  multigrid_order.rs
cli/src/node/: client.rs  mod.rs  scan.rs  transactions.rs  wallet.rs
cli/src/spectrum/: pool.rs
cli/tests/: headers.json  test_contract.rs  test_multi.rs
contracts/: contract.es  default.nix
contracts/grid_multi/: contract.es
contracts/grid_single/: contract.es  symbols.json
