[package]
name = "off-the-grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ergo-lib = "0.23"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
base16 = "0.2"
anyhow = "1.0"
config = "0.14"
clap = { version = "4.5", features = [ "derive" ] }
itertools = "0.13"
fraction = { version = "0.15", default-features = false }
futures = "0.3"
tabled = { version = "0.14", features = ["color", "std"] }
colored = "2.1"

[dev-dependencies]
proptest = "1.4"
